src/other/mico-2.3.12/test/idl/error/expected-stderr-case20.idl
case20.idl:4: identifier 'object' collides with IDL keyword 'Object'
